Renamed framework to helper.

--- a/notebooks/assistant-02-framework.ipynb
+++ b/notebooks/assistant-02-framework.ipynb
@@ -19,12 +19,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import oaihelper as framework\n",
+    "import oaihelper as helper\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = framework.get_openai_client(api_key=framework.api_KEY,\n",
-    "        api_version=framework.api_version,\n",
-    "        azure_endpoint=framework.api_URI,)"
+    "client = helper.get_openai_client(api_key=helper.api_KEY,\n",
+    "        api_version=helper.api_version,\n",
+    "        azure_endpoint=helper.api_URI,)"
    ]
   },
   {
@@ -43,20 +43,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_4d6rpY6Raa4cl09UchMgZsiY 1\n"
+      "Added assistant:  asst_CXpL4YjWjbtsx4L7Fn8XvmY3 1\n"
      ]
     }
    ],
    "source": [
     "## Clear the shelves\n",
-    "framework.clear_shelves()\n",
+    "helper.clear_shelves()\n",
     "\n",
     "## Create an assistant\n",
-    "math_tutor_assistant = framework.create_assistant(client,\n",
+    "math_tutor_assistant = helper.create_assistant(client,\n",
     "                                                  name=\"fta-Math Tutor\",\n",
     "                                                  instructions=\"You are a personal math tutor. Write and run code to answer math questions.\", \n",
     "                                                  tools=[{\"type\": \"code_interpreter\"}], \n",
-    "                                                  model=framework.gpt_deployment_name)"
+    "                                                  model=helper.gpt_deployment_name)"
    ]
   },
   {
@@ -78,30 +78,30 @@
      "output_type": "stream",
      "text": [
       "Creating new thread for John with user_id 123\n",
-      "Added thread:  thread_ZR42YufKJ0KKVAe2n0LbORBt 1\n",
+      "Added thread:  thread_A0C20mOg3yAuw7b1qFSj6CNb 1\n",
       "Generated message: 2 + 2 equals 4.\n",
       "To John: 2 + 2 equals 4.\n",
       "Creating new thread for Sarah with user_id 456\n",
-      "Added thread:  thread_P5p6slXHIR1rkam0ioGzrBrS 2\n",
-      "Generated message: The expression \\( x \\times x \\) simplifies to \\( x^2 \\), which represents the square of \\( x \\).\n",
-      "To Sarah: The expression \\( x \\times x \\) simplifies to \\( x^2 \\), which represents the square of \\( x \\).\n",
+      "Added thread:  thread_e2APAnBw0Q1sVZrz0Kg9vvlB 2\n",
+      "Generated message: The expression \\( x \\cdot x \\) simplifies to \\( x^2 \\).\n",
+      "To Sarah: The expression \\( x \\cdot x \\) simplifies to \\( x^2 \\).\n",
       "Retrieving existing thread for John with user_id 123\n",
-      "Generated message: The value of \\(x\\) when \\(y = 2\\) and \\(m = -10\\) is \\(x = -15\\).\n",
-      "To John: The value of \\(x\\) when \\(y = 2\\) and \\(m = -10\\) is \\(x = -15\\).\n",
+      "Generated message: The value of \\( x \\) for \\( x = m \\cdot y + 5 \\), where \\( y = 2 \\) and \\( m = -10 \\), is \\( -15 \\).\n",
+      "To John: The value of \\( x \\) for \\( x = m \\cdot y + 5 \\), where \\( y = 2 \\) and \\( m = -10 \\), is \\( -15 \\).\n",
       "Retrieving existing thread for Sarah with user_id 456\n",
-      "Generated message: The value of \\( y \\) when \\( x = 2 \\) and \\( y = x \\times x \\) is \\( 4 \\).\n",
-      "To Sarah: The value of \\( y \\) when \\( x = 2 \\) and \\( y = x \\times x \\) is \\( 4 \\).\n"
+      "Generated message: The value of \\( y \\) for \\( y = x \\times x \\) when \\( x = 2 \\) is \\( 4 \\).\n",
+      "To Sarah: The value of \\( y \\) for \\( y = x \\times x \\) when \\( x = 2 \\) is \\( 4 \\).\n"
      ]
     }
    ],
    "source": [
-    "new_message = framework.generate_response(client,math_tutor_assistant,\"What's 2+2\", \"123\", \"John\")\n",
+    "new_message = helper.generate_response(client,math_tutor_assistant,\"What's 2+2\", \"123\", \"John\")\n",
     "\n",
-    "new_message = framework.generate_response(client,math_tutor_assistant,\"What's x*x?\", \"456\", \"Sarah\")\n",
+    "new_message = helper.generate_response(client,math_tutor_assistant,\"What's x*x?\", \"456\", \"Sarah\")\n",
     "\n",
-    "new_message = framework.generate_response(client,math_tutor_assistant,\"What the value of x, for x=m*y+5, if y=2 and m=-10?\", \"123\", \"John\")\n",
+    "new_message = helper.generate_response(client,math_tutor_assistant,\"What the value of x, for x=m*y+5, if y=2 and m=-10?\", \"123\", \"John\")\n",
     "\n",
-    "new_message = framework.generate_response(client,math_tutor_assistant,\"What is the value of y, for y=x*x?, if x=2?\", \"456\", \"Sarah\")"
+    "new_message = helper.generate_response(client,math_tutor_assistant,\"What is the value of y, for y=x*x?, if x=2?\", \"456\", \"Sarah\")"
    ]
   },
   {
@@ -120,12 +120,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_k5N3HNsbB7cSpAEsKAGuFVLh 2\n"
+      "Added assistant:  asst_Nx0j5U6kuBeCNws6UimFgbyk 2\n"
      ]
     }
    ],
    "source": [
-    "golang_tutor = framework.create_assistant(client,name=\"Golang\",instructions=\"You are an assistant that can help write and explain Go code.\", model=framework.gpt_deployment_name)"
+    "golang_tutor = helper.create_assistant(client,name=\"Golang\",instructions=\"You are an assistant that can help write and explain Go code.\", model=helper.gpt_deployment_name)"
    ]
   },
   {
@@ -144,133 +144,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating new thread for Victor with user_id 789\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Added thread:  thread_5hVlSXbnbEb2DkoBUomDY5TB 3\n",
-      "Generated message: Here's a simple Go application that calculates the 1001st prime number using the Sieve of Eratosthenes, a classic algorithm for finding all prime numbers up to any given limit. Keep in mind that since we don't know in advance where the 1001st prime will be, we have to either estimate an upper limit or dynamically grow our search.\n",
-      "\n",
-      "For simplicity, let's use a dynamic approach where we start with a reasonable range and keep increasing it until we find the 1001st prime number.\n",
-      "\n",
-      "```go\n",
-      "package main\n",
-      "\n",
-      "import (\n",
-      "\t\"fmt\"\n",
-      "\t\"math\"\n",
-      ")\n",
-      "\n",
-      "func isPrime(number int) bool {\n",
-      "\tif number <= 1 {\n",
-      "\t\treturn false\n",
-      "\t}\n",
-      "\tif number == 2 {\n",
-      "\t\treturn true\n",
-      "\t}\n",
-      "\tif number%2 == 0 {\n",
-      "\t\treturn false\n",
-      "\t}\n",
-      "\tsqrtNum := int(math.Sqrt(float64(number)))\n",
+      "Creating new thread for Victor with user_id 789\n",
+      "Added thread:  thread_oGGpegnAtqi5nxJOpItNC5zl 3\n",
+      "Generated message: int(math.Sqrt(float64(num)))\n",
       "\tfor i := 3; i <= sqrtNum; i += 2 {\n",
-      "\t\tif number%i == 0 {\n",
+      "\t\tif num%i == 0 {\n",
       "\t\t\treturn false\n",
       "\t\t}\n",
       "\t}\n",
       "\treturn true\n",
       "}\n",
       "\n",
+      "// findNthPrime finds the nth prime number\n",
       "func findNthPrime(n int) int {\n",
-      "\tcount := 0\n",
-      "\tnumber := 1\n",
+      "\tcount := 0  // Number of primes found\n",
+      "\tcurrent := 1 // Current number to check\n",
+      "\n",
       "\tfor count < n {\n",
-      "\t\tnumber += 1\n",
-      "\t\tif isPrime(number) {\n",
+      "\t\tcurrent++\n",
+      "\t\tif isPrime(current) {\n",
       "\t\t\tcount++\n",
       "\t\t}\n",
       "\t}\n",
-      "\treturn number\n",
+      "\n",
+      "\treturn current\n",
       "}\n",
       "\n",
       "func main() {\n",
-      "\tconst targetPrimeIndex = 1001\n",
-      "\tnthPrime := findNthPrime(targetPrimeIndex)\n",
-      "\tfmt.Printf(\"The %d-th prime number is: %d\\n\", targetPrimeIndex, nthPrime)\n",
+      "\tnthPrime := 1001\n",
+      "\tprime := findNthPrime(nthPrime)\n",
+      "\tfmt.Printf(\"The %dth prime number is %d\\n\", nthPrime, prime)\n",
       "}\n",
       "```\n",
       "\n",
-      "To run this application, just paste the code into a file (for example, `find_prime.go`), and then execute it using the Go toolchain:\n",
+      "The main part of the application is the `findNthPrime` function which keeps looking for prime numbers until it finds the `n`th one. It uses the `isPrime` helper function to determine if a number is a prime.\n",
       "\n",
-      "```sh\n",
-      "go run find_prime.go\n",
-      "```\n",
+      "To run this application, save it to a file with a `.go` extension, for example `find_prime.go`, and execute it by running `go run find_prime.go` from your command line in the directory where the file is located.\n",
       "\n",
-      "This program defines a simple `isPrime` function that checks the primality of a given number, and then it finds the 1001st prime number by incrementing the variable `number` until it has found the desired number of primes.\n",
-      "To Victor: Here's a simple Go application that calculates the 1001st prime number using the Sieve of Eratosthenes, a classic algorithm for finding all prime numbers up to any given limit. Keep in mind that since we don't know in advance where the 1001st prime will be, we have to either estimate an upper limit or dynamically grow our search.\n",
-      "\n",
-      "For simplicity, let's use a dynamic approach where we start with a reasonable range and keep increasing it until we find the 1001st prime number.\n",
-      "\n",
-      "```go\n",
-      "package main\n",
-      "\n",
-      "import (\n",
-      "\t\"fmt\"\n",
-      "\t\"math\"\n",
-      ")\n",
-      "\n",
-      "func isPrime(number int) bool {\n",
-      "\tif number <= 1 {\n",
-      "\t\treturn false\n",
-      "\t}\n",
-      "\tif number == 2 {\n",
-      "\t\treturn true\n",
-      "\t}\n",
-      "\tif number%2 == 0 {\n",
-      "\t\treturn false\n",
-      "\t}\n",
-      "\tsqrtNum := int(math.Sqrt(float64(number)))\n",
+      "The application may take some time to compute the 1001st prime, depending on your system, as it performs a brute-force search for prime numbers.\n",
+      "To Victor: int(math.Sqrt(float64(num)))\n",
       "\tfor i := 3; i <= sqrtNum; i += 2 {\n",
-      "\t\tif number%i == 0 {\n",
+      "\t\tif num%i == 0 {\n",
       "\t\t\treturn false\n",
       "\t\t}\n",
       "\t}\n",
       "\treturn true\n",
       "}\n",
       "\n",
+      "// findNthPrime finds the nth prime number\n",
       "func findNthPrime(n int) int {\n",
-      "\tcount := 0\n",
-      "\tnumber := 1\n",
+      "\tcount := 0  // Number of primes found\n",
+      "\tcurrent := 1 // Current number to check\n",
+      "\n",
       "\tfor count < n {\n",
-      "\t\tnumber += 1\n",
-      "\t\tif isPrime(number) {\n",
+      "\t\tcurrent++\n",
+      "\t\tif isPrime(current) {\n",
       "\t\t\tcount++\n",
       "\t\t}\n",
       "\t}\n",
-      "\treturn number\n",
+      "\n",
+      "\treturn current\n",
       "}\n",
       "\n",
       "func main() {\n",
-      "\tconst targetPrimeIndex = 1001\n",
-      "\tnthPrime := findNthPrime(targetPrimeIndex)\n",
-      "\tfmt.Printf(\"The %d-th prime number is: %d\\n\", targetPrimeIndex, nthPrime)\n",
+      "\tnthPrime := 1001\n",
+      "\tprime := findNthPrime(nthPrime)\n",
+      "\tfmt.Printf(\"The %dth prime number is %d\\n\", nthPrime, prime)\n",
       "}\n",
       "```\n",
       "\n",
-      "To run this application, just paste the code into a file (for example, `find_prime.go`), and then execute it using the Go toolchain:\n",
+      "The main part of the application is the `findNthPrime` function which keeps looking for prime numbers until it finds the `n`th one. It uses the `isPrime` helper function to determine if a number is a prime.\n",
       "\n",
-      "```sh\n",
-      "go run find_prime.go\n",
-      "```\n",
+      "To run this application, save it to a file with a `.go` extension, for example `find_prime.go`, and execute it by running `go run find_prime.go` from your command line in the directory where the file is located.\n",
       "\n",
-      "This program defines a simple `isPrime` function that checks the primality of a given number, and then it finds the 1001st prime number by incrementing the variable `number` until it has found the desired number of primes.\n"
+      "The application may take some time to compute the 1001st prime, depending on your system, as it performs a brute-force search for prime numbers.\n"
      ]
     }
    ],
    "source": [
-    "new_message = framework.generate_response(client,golang_tutor,\"Write a Go application to find the 1001st prime number.\", \"789\", \"Victor\")"
+    "new_message = helper.generate_response(client,golang_tutor,\"Write a Go application to find the 1001st prime number.\", \"789\", \"Victor\")"
    ]
   },
   {
@@ -292,12 +244,13 @@
      "output_type": "stream",
      "text": [
       "Deleting:  2  assistants.\n",
-      "AssistantDeleted(id='asst_4d6rpY6Raa4cl09UchMgZsiY', deleted=True, object='assistant.deleted')\n",
-      "AssistantDeleted(id='asst_k5N3HNsbB7cSpAEsKAGuFVLh', deleted=True, object='assistant.deleted')\n",
+      "AssistantDeleted(id='asst_CXpL4YjWjbtsx4L7Fn8XvmY3', deleted=True, object='assistant.deleted')\n",
+      "AssistantDeleted(id='asst_Nx0j5U6kuBeCNws6UimFgbyk', deleted=True, object='assistant.deleted')\n",
       "Deleting:  3  threads.\n",
-      "ThreadDeleted(id='thread_ZR42YufKJ0KKVAe2n0LbORBt', deleted=True, object='thread.deleted')\n",
-      "ThreadDeleted(id='thread_P5p6slXHIR1rkam0ioGzrBrS', deleted=True, object='thread.deleted')\n",
-      "ThreadDeleted(id='thread_5hVlSXbnbEb2DkoBUomDY5TB', deleted=True, object='thread.deleted')\n"
+      "ThreadDeleted(id='thread_A0C20mOg3yAuw7b1qFSj6CNb', deleted=True, object='thread.deleted')\n",
+      "ThreadDeleted(id='thread_e2APAnBw0Q1sVZrz0Kg9vvlB', deleted=True, object='thread.deleted')\n",
+      "ThreadDeleted(id='thread_oGGpegnAtqi5nxJOpItNC5zl', deleted=True, object='thread.deleted')\n",
+      "Deleting:  0  files.\n"
      ]
     }
    ],
@@ -305,7 +258,7 @@
     "#assert framework.ai_assistants == 2\n",
     "#assert framework.ai_threads==3\n",
     "\n",
-    "framework.cleanup(client)"
+    "helper.cleanup(client)"
    ]
   }
  ],
