--- a/notebooks/assistant-03-function.ipynb
+++ b/notebooks/assistant-03-function.ipynb
@@ -21,13 +21,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import oaihelper as framework\n",
+    "import oaihelper as helper\n",
     "import yfinance as yf\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = framework.get_openai_client(api_key=framework.api_KEY,\n",
-    "        api_version=framework.api_version,\n",
-    "        azure_endpoint=framework.api_URI,)"
+    "client = helper.get_openai_client(api_key=helper.api_KEY,\n",
+    "        api_version=helper.api_version,\n",
+    "        azure_endpoint=helper.api_URI,)"
    ]
   },
   {
@@ -103,14 +103,14 @@
     }
    ],
    "source": [
-    "framework.clear_shelves()\n",
+    "helper.clear_shelves()\n",
     "\n",
     "## Create an assistant\n",
-    "stock_assistant = framework.create_assistant(client,\n",
+    "stock_assistant = helper.create_assistant(client,\n",
     "                                                  name=\"fta-Securities Trading Assistant\",\n",
     "                                                  instructions=\"You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.\", \n",
     "                                                  tools=tools_list, \n",
-    "                                                  model=framework.gpt_deployment_name)"
+    "                                                  model=helper.gpt_deployment_name)"
    ]
   },
   {
@@ -216,8 +216,8 @@
     }
    ],
    "source": [
-    "framework.generate_response(client,stock_assistant,\"Can you please provide me the latest stock prices for Microsoft and NVIDIA?\", \"123\", \"Alex\", function_calling_delegate)\n",
-    "framework.generate_response(client,stock_assistant,\"Can you please provide me the latest stock prices for Apple and Tesla?\", \"123\", \"Alex\", function_calling_delegate)\n"
+    "helper.generate_response(client,stock_assistant,\"Can you please provide me the latest stock prices for Microsoft and NVIDIA?\", \"123\", \"Alex\", function_calling_delegate)\n",
+    "helper.generate_response(client,stock_assistant,\"Can you please provide me the latest stock prices for Apple and Tesla?\", \"123\", \"Alex\", function_calling_delegate)\n"
    ]
   },
   {
@@ -234,7 +234,7 @@
     }
    ],
    "source": [
-    "assistants, threads, files = framework.get_counts()\n",
+    "assistants, threads, files = helper.get_counts()\n",
     "print(f\"Framework counts Assistants: {assistants}, Threads: {threads}, Files: {files}\")"
    ]
   },
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "framework.cleanup(client)"
+    "helper.cleanup(client)"
    ]
   }
  ],
