--- a/notebooks/assistant-10-retrieval.ipynb
+++ b/notebooks/assistant-10-retrieval.ipynb
@@ -30,13 +30,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -183,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Process a user message"
+    "### Process user messages"
    ]
   },
   {
