--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -27,15 +27,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "import oaihelper as framework\n",
+    "import oaihelper as helper\n",
     "import yfinance as yf\n",
     "\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = framework.get_openai_client(api_key=framework.api_KEY,\n",
-    "        api_version=framework.api_version,\n",
-    "        azure_endpoint=framework.api_URI,)"
+    "client = helper.get_openai_client(api_key=helper.api_KEY,\n",
+    "        api_version=helper.api_version,\n",
+    "        azure_endpoint=helper.api_URI,)"
    ]
   },
   {
@@ -133,14 +132,21 @@
     }
    ],
    "source": [
-    "framework.clear_shelves()\n",
+    "helper.clear_shelves()\n",
     "\n",
     "## Create an assistant\n",
-    "stock_assistant = framework.create_assistant(client,\n",
+    "stock_assistant = helper.create_assistant(client,\n",
     "                                                  name=\"fta-Securities Trading Assistant\",\n",
     "                                                  instructions=\"You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.\", \n",
     "                                                  tools=tools_list, \n",
-    "                                                  model=framework.gpt_deployment_name)"
+    "                                                  model=helper.gpt_deployment_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the function calling delegate"
    ]
   },
   {
@@ -169,7 +175,7 @@
     "            print(\"Sending email...\")\n",
     "            email_to = arguments['to']\n",
     "            email_content = arguments['content']\n",
-    "            framework.send_email({'to': email_to,'content':email_content})\n",
+    "            helper.send_email({'to': email_to,'content':email_content})\n",
     "            \n",
     "            tool_outputs.append({\n",
     "                \"tool_call_id\": action['id'],\n",
@@ -190,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a thread, put a message on the thread, and view the initial status"
+    "### Process the user message"
    ]
   },
   {
@@ -255,14 +261,14 @@
     "\n",
     "question = \"For the following article: \\n\\nArticle: \"\"\"\"\"\"\" + article + \"\\n\"\"\"\"\"\"\" + \"\\n\\nEmail a summary of the article in simple HTML format, include today's date, include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com.\" + \"Use only the provide text.\"\n",
     "\n",
-    "framework.generate_response(client,stock_assistant,question, \"123\", \"Alex\", function_calling_delegate)"
+    "helper.generate_response(client,stock_assistant,question, \"123\", \"Alex\", function_calling_delegate)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Be a good citizen are move assistants, threads, and files"
+    "### Delete all demo objects"
    ]
   },
   {
@@ -271,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "framework.cleanup(client)"
+    "helper.cleanup(client)"
    ]
   }
  ],
