--- a/notebooks/assistant-06-code_function_la_email.ipynb
+++ b/notebooks/assistant-06-code_function_la_email.ipynb
@@ -32,14 +32,14 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "import oaihelper as framework\n",
+    "import oaihelper as helper\n",
     "import yfinance as yf\n",
     "\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = framework.get_openai_client(api_key=framework.api_KEY,\n",
-    "        api_version=framework.api_version,\n",
-    "        azure_endpoint=framework.api_URI,)"
+    "client = helper.get_openai_client(api_key=helper.api_KEY,\n",
+    "        api_version=helper.api_version,\n",
+    "        azure_endpoint=helper.api_URI,)"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file = framework.upload_file(client,\"../data/fta-portfolio.csv\")"
+    "csv_file = helper.upload_file(client,\"../data/fta-portfolio.csv\")"
    ]
   },
   {
@@ -149,14 +149,14 @@
     }
    ],
    "source": [
-    "framework.clear_shelves()\n",
+    "helper.clear_shelves()\n",
     "\n",
     "## Create an assistant\n",
-    "stock_assistant = framework.create_assistant(client,\n",
+    "stock_assistant = helper.create_assistant(client,\n",
     "                                                  name=\"fta-Securities Trading Assistant\",\n",
     "                                                  instructions=\"You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.\", \n",
     "                                                  tools=tools_list,                                                  \n",
-    "                                                  model=framework.gpt_deployment_name,\n",
+    "                                                  model=helper.gpt_deployment_name,\n",
     "                                                  file_ids=[csv_file.id]\n",
     "                                                  )"
    ]
@@ -188,7 +188,7 @@
     "run = client.beta.threads.runs.create(\n",
     "    thread_id=thread.id,\n",
     "    assistant_id=stock_assistant.id,\n",
-    "    instructions=\"Today's date and time is: \" + framework.get_localized_datetime() + \".\\n\\n\"\n",
+    "    instructions=\"Today's date and time is: \" + helper.get_localized_datetime() + \".\\n\\n\"\n",
     ")\n",
     "\n",
     "#print(run.model_dump_json(indent=4))"
@@ -289,7 +289,7 @@
     "                print(\"Sending email...\")\n",
     "                email_to = arguments['to']\n",
     "                email_content = arguments['content']\n",
-    "                framework.send_email({'to': email_to,'content':email_content})\n",
+    "                helper.send_email({'to': email_to,'content':email_content})\n",
     "                \n",
     "                tool_outputs.append({\n",
     "                    \"tool_call_id\": action['id'],\n",
