--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_zjb6TicktpixN9oPLBiKIUif 1\n"
+      "Added assistant:  asst_7FhimBlOMSQfZmyIectGnz5G 1\n"
      ]
     }
    ],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -209,26 +209,26 @@
      "output_type": "stream",
      "text": [
       "Creating new thread for Alex with user_id 123\n",
-      "Added thread:  thread_TuDS2L4sgBFWspM2ZlNDXEXi 1\n",
+      "Added thread:  thread_qxU51ZfnRdkJhHUbX4SD1Mbm 1\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_52aWEqZMRffKXIMOePAOu4y2', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_kGrmCcxhIJe0QIcjF56EXJkd', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_9DzuLmM2HKekj1IyC3O8ie77', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_mUt4ccB5ntf5nGsHYaUOw5AR', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_ay1NMZgKacamI334M3wzyaMm', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_bggBagjrdUyAsZqFqntue1zx', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_2EZOBi2FDmg7HO9cha0OoF1t', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_RNm9Z7KrmsAzSAjuwkjK53Cv', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_6Kz6lVya7mGVTabDtHq3ycjB', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_KdFGu0OeO2qgO7QCJngnTtSS', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_u3YBuRDAmCKWPw4m7uIAyYXP', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_YshzP60XbqM6pc1Q4uER65xY', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_jNxI7io27QSJqms4ZUkvb7Ou', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_4QxIOOCETbG7tVwstzMkVR2f', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_TywNrc8dsmRPDfCWW2HE1FLj', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com, vsantana@microsoft.com\",\\n  \"content\": \"<html>\\\\n<head>\\\\n<title>Market Performance Summary</title>\\\\n</head>\\\\n<body>\\\\n<h1>Summary of Recent Market Performance</h1>\\\\n<p>Date: 05/02/2024</p>\\\\n<p>Microsoft (MSFT) and Nvidia (NVDA) have recently outshone other tech giants such as Apple (AAPL), Novo Nordisk (NVO), MercadoLibre (MELI), Tradeweb Markets (TW), and Tesla (TSLA) in market performance.<br/>\\\\nMSFT has thrived due to strong financials and a transition to cloud-based services, while NVDA has seen growth from its dominance in gaming and AI technology.<br/>\\\\nAAPL, despite supply chain issues and a hit to iPhone sales, has maintained resilience through its ecosystem. Other mentioned companies have faced various challenges but have potential for future growth.</p>\\\\n<h2>Closing Prices as of Most Recent Trading Day:</h2>\\\\n<ul>\\\\n<li>Microsoft (MSFT) - $388.60</li>\\\\n<li>Nvidia (NVDA) - $562.15</li>\\\\n<li>Apple (AAPL) - $182.44</li>\\\\n<li>Novo Nordisk (NVO) - $106.17</li>\\\\n<li>MercadoLibre (MELI) - $1656.69</li>\\\\n<li>Tradeweb Markets (TW) - $95.67</li>\\\\n<li>Tesla (TSLA) - $219.56</li>\\\\n</ul>\\\\n</body>\\\\n</html>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_Fr66oK55CU7FQECshlKKG272', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com\",\\n  \"content\": \"<html>\\\\n<head></head>\\\\n<body>\\\\n<p>Dear Reader,</p>\\\\n\\\\n<p>Here is a summary of the article titled <strong>Tech Giants Microsoft and Nvidia Outshine Others in Recent Market Performance</strong>, as well as the closing stock prices for the companies mentioned as of today, <strong>January 16, 2024</strong>.</p>\\\\n\\\\n<p><strong>Summary:</strong></p>\\\\n<p>Microsoft (MSFT) and Nvidia (NVDA) are leading the tech industry with strong market performance. MSFT\\'s growth is attributed to its cloud services and resilience during the pandemic. NVDA has excelled due to its presence in gaming, AI, and its acquisition of Arm Holdings. Apple\\'s (AAPL) performance has been subdued due to supply chain issues but is supported by its services and products portfolio.</p>\\\\n\\\\n<p>Other companies like Novo Nordisk (NVO), MercadoLibre (MELI), Tradeweb Markets (TW), and Tesla (TSLA) have faced recent market difficulties. NVO has been affected by industry competition and pricing pressures. MELI deals with economic volatility in Latin America. TW\\'s trading volumes slowed due to market volatility. TSLA\\'s stock price has fluctuated amidst scrutiny over valuation and competition.</p>\\\\n\\\\n<p><strong>Closing Prices (January 16, 2024):</strong></p>\\\\n<ul>\\\\n  <li>Microsoft (MSFT): $389.70</li>\\\\n  <li>Nvidia (NVDA): $561.79</li>\\\\n  <li>Apple (AAPL): $183.20</li>\\\\n  <li>Novo Nordisk (NVO): $106.36</li>\\\\n  <li>MercadoLibre (MELI): $1664.47</li>\\\\n  <li>Tradeweb Markets (TW): $95.55</li>\\\\n  <li>Tesla (TSLA): $219.91</li>\\\\n</ul>\\\\n\\\\n<p>Best regards,</p>\\\\n<p>[Your Name]</p>\\\\n</body>\\\\n</html>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
       "Sending email...\n",
-      "Email sent to: alemor@microsoft.com, vsantana@microsoft.com\n",
+      "Email sent to: alemor@microsoft.com\n",
       "Submitting outputs back to the Assistant...\n",
-      "Generated message: The email summarizing the article has been sent to both alemor@microsoft.com and vsantana@microsoft.com with the requested information and today's closing prices for the mentioned stocks. If there's anything else you would like assistance with, please let me know.\n",
-      "To Alex: The email summarizing the article has been sent to both alemor@microsoft.com and vsantana@microsoft.com with the requested information and today's closing prices for the mentioned stocks. If there's anything else you would like assistance with, please let me know.\n"
+      "Generated message: The email summarizing the article, including the closing stock prices of the companies mentioned, and the current date has been sent to alemor@microsoft.com successfully. If you need any further assistance, please let me know!\n",
+      "To Alex: The email summarizing the article, including the closing stock prices of the companies mentioned, and the current date has been sent to alemor@microsoft.com successfully. If you need any further assistance, please let me know!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\"The email summarizing the article has been sent to both alemor@microsoft.com and vsantana@microsoft.com with the requested information and today's closing prices for the mentioned stocks. If there's anything else you would like assistance with, please let me know.\""
+       "'The email summarizing the article, including the closing stock prices of the companies mentioned, and the current date has been sent to alemor@microsoft.com successfully. If you need any further assistance, please let me know!'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
     "# Step 2: Create a Thread\n",
     "article = \"\"\"Title: Tech Giants Microsoft and Nvidia Outshine Others in Recent Market Performance\n",
     "\n",
-    "New York, New York 01/15/2024\n",
+    "New York, New York\n",
     "\n",
     "Introduction: In the ever-evolving world of technology, the performance of major companies often serves as a barometer for the industry's overall health. In recent times, two tech giants, Microsoft (MSFT) and Nvidia (NVDA), have stood out from the pack with their impressive market performance. However, other prominent tickers such as Apple (AAPL), Novo Nordisk (NVO), MercadoLibre (MELI), Tradeweb Markets (TW), and Tesla (TSLA) have struggled to keep pace. Let's delve into the details of their respective performances and explore the factors contributing to their divergent trajectories.\n",
     "\n",
@@ -273,9 +273,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting:  1  assistants.\n",
+      "AssistantDeleted(id='asst_7FhimBlOMSQfZmyIectGnz5G', deleted=True, object='assistant.deleted')\n",
+      "Deleting:  1  threads.\n",
+      "ThreadDeleted(id='thread_qxU51ZfnRdkJhHUbX4SD1Mbm', deleted=True, object='thread.deleted')\n",
+      "Deleting:  0  files.\n"
+     ]
+    }
+   ],
    "source": [
     "helper.cleanup(client)"
    ]
