--- a/notebooks/assistant-06-code_function_la_email.ipynb
+++ b/notebooks/assistant-06-code_function_la_email.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assistant-05<br/>Code Interpreter & Function calling\n",
+    "# Assistant-06<br/>Code Interpreter & Function calling\n",
     "\n",
     "## Trading Assistant that can calculate portfolio values and email a report\n",
     "\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,9 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added file:  assistant-PG6QBBpXAVnE2wTsaiycOnvd 1\n"
+     ]
+    }
+   ],
    "source": [
     "csv_file = helper.upload_file(client,\"../data/fta-portfolio.csv\")"
    ]
@@ -137,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_kyfLQ7ioPqs0faC1YvFYPPaN 2\n"
+      "Added assistant:  asst_9XFFufWoLki4SooA1OLVU9GD 1\n"
      ]
     }
    ],
@@ -165,33 +173,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a thread, put a message on the thread, and view the initial status"
+    "### Define the function calling delegate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2: Create a Thread\n",
-    "thread = client.beta.threads.create()\n",
-    "\n",
-    "# Step 3: Add a Message to a Thread\n",
-    "message = client.beta.threads.messages.create(\n",
-    "    thread_id=thread.id,\n",
-    "    role=\"user\",\n",
-    "    content=\"Based on the provided portfolio, please email me an HTML formatted report to alemor@microsoft.com with the details for each stock based on the latest stock prices, and list the best and worst performing stocks in my portfolio.\"\n",
-    ")\n",
-    "\n",
-    "# Step 4: Run the Assistant\n",
-    "run = client.beta.threads.runs.create(\n",
-    "    thread_id=thread.id,\n",
-    "    assistant_id=stock_assistant.id,\n",
-    "    instructions=\"Today's date and time is: \" + helper.get_localized_datetime() + \".\\n\\n\"\n",
-    ")\n",
-    "\n",
-    "#print(run.model_dump_json(indent=4))"
+    "def function_calling_delegate(client, thread, run):\n",
+    "    print(\"Function Calling\")\n",
+    "    required_actions = run.required_action.submit_tool_outputs.model_dump()\n",
+    "    print(required_actions)\n",
+    "    tool_outputs = []\n",
+    "    import json\n",
+    "    for action in required_actions[\"tool_calls\"]:\n",
+    "        func_name = action['function']['name']\n",
+    "        arguments = json.loads(action['function']['arguments'])\n",
+    "        \n",
+    "        if func_name == \"get_stock_price\":\n",
+    "            output = get_stock_price(symbol=arguments['symbol'])\n",
+    "            tool_outputs.append({\n",
+    "                \"tool_call_id\": action['id'],\n",
+    "                \"output\": output\n",
+    "            })\n",
+    "        elif func_name == \"send_email\":\n",
+    "            print(\"Sending email...\")\n",
+    "            email_to = arguments['to']\n",
+    "            email_content = arguments['content']\n",
+    "            helper.send_email({'to': email_to,'content':email_content})\n",
+    "            \n",
+    "            tool_outputs.append({\n",
+    "                \"tool_call_id\": action['id'],\n",
+    "                \"output\": \"Email sent\"\n",
+    "            })\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unknown function: {func_name}\")\n",
+    "        \n",
+    "    print(\"Submitting outputs back to the Assistant...\")\n",
+    "    client.beta.threads.runs.submit_tool_outputs(\n",
+    "        thread_id=thread.id,\n",
+    "        run_id=run.id,\n",
+    "        tool_outputs=tool_outputs\n",
+    "    )"
    ]
   },
   {
@@ -203,110 +228,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
+      "Creating new thread for Alex with user_id 123\n",
+      "Added thread:  thread_TypTapr7ZuM5RzRrsnmvPhD2 1\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_MDf3RDJVBumRHoH99Trn2EVe', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_1jfzdD8XWpxvFxUZhbwH66yu', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_KNGFTnOkVIeZ7NE0YgRwlzPR', 'function': {'arguments': '{\"symbol\": \"GOOGL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_tf8PsATH3hXHek7IPRKkls8G', 'function': {'arguments': '{\"symbol\": \"AMZN\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_U2nTfN1xOfvwQwxpL47EhdFh', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_E0apT6RBBnkiVQJ825lIOBY7', 'function': {'arguments': '{\"symbol\": \"NFLX\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_whqcoq5wSsSsnreAAAuicz92', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_bYSlpRF0Zo9JbXWzMnlGtPfm', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_KXPtUHk3J6OsIRI1OQ9baxPx', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_uUHEBA1QO5MgaYMvBD8VF8UD', 'function': {'arguments': '{\"symbol\": \"GOOGL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_rbQtnCobifkEMOiZl1HHFlR2', 'function': {'arguments': '{\"symbol\": \"AMZN\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_eGPFemW2ryEZvP2LMCR5YFHT', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_0T0Ucotwew9JhUDL58VTc4C5', 'function': {'arguments': '{\"symbol\": \"NFLX\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_vvcJslXqaUJzwjYkXtPIJDm2', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_UY1ojm5U3lfIQtfYsWJWsguN', 'function': {'arguments': '{\"to\":\"alemor@microsoft.com\",\"content\":\"\\\\n<html>\\\\n    <head>\\\\n        <style>\\\\n            table, th, td {\\\\n                border: 1px solid black;\\\\n                border-collapse: collapse;\\\\n            }\\\\n            th, td {\\\\n                padding: 5px;\\\\n                text-align: left;\\\\n            }\\\\n            th {\\\\n                background-color: #4CAF50;\\\\n                color: white;\\\\n            }\\\\n            .best {\\\\n                background-color: #90ee90;\\\\n            }\\\\n            .worst {\\\\n                background-color: #ffcccb;\\\\n            }\\\\n        </style>\\\\n    </head>\\\\n    <body>\\\\n        <h2>Stock Portfolio Report</h2>\\\\n        <table>\\\\n            <tr>\\\\n                <th>Ticker</th>\\\\n                <th>Quantity</th>\\\\n                <th>Purchase Price</th>\\\\n                <th>Cost</th>\\\\n                <th>Latest Price</th>\\\\n                <th>Market Value</th>\\\\n                <th>Profit/Loss</th>\\\\n            </tr>\\\\n            \\\\n        <tr class=\\\\\"\\\\\">\\\\n            <td>AAPL</td>\\\\n            <td>10</td>\\\\n            <td>$250.00</td>\\\\n            <td>$2500.00</td>\\\\n            <td>$182.62</td>\\\\n            <td>$1826.20</td>\\\\n            <td>-$673.80</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"best\\\\\">\\\\n            <td>MSFT</td>\\\\n            <td>200</td>\\\\n            <td>$100.00</td>\\\\n            <td>$20000.00</td>\\\\n            <td>$390.61</td>\\\\n            <td>$78123.00</td>\\\\n            <td>$58123.00</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"\\\\\">\\\\n            <td>GOOGL</td>\\\\n            <td>1200</td>\\\\n            <td>$75.00</td>\\\\n            <td>$90000.00</td>\\\\n            <td>$142.26</td>\\\\n            <td>$170718.00</td>\\\\n            <td>$80718.00</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"\\\\\">\\\\n            <td>AMZN</td>\\\\n            <td>1800</td>\\\\n            <td>$50.00</td>\\\\n            <td>$90000.00</td>\\\\n            <td>$152.79</td>\\\\n            <td>$275022.00</td>\\\\n            <td>$185022.00</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"worst\\\\\">\\\\n            <td>TSLA</td>\\\\n            <td>500</td>\\\\n            <td>$500.00</td>\\\\n            <td>$250000.00</td>\\\\n            <td>$219.39</td>\\\\n            <td>$109697.20</td>\\\\n            <td>-$140302.80</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"\\\\\">\\\\n            <td>NFLX</td>\\\\n            <td>300</td>\\\\n            <td>$80.00</td>\\\\n            <td>$24000.00</td>\\\\n            <td>$482.11</td>\\\\n            <td>$144631.50</td>\\\\n            <td>$120631.50</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"\\\\\">\\\\n            <td>NVDA</td>\\\\n            <td>250</td>\\\\n            <td>$120.00</td>\\\\n            <td>$30000.00</td>\\\\n            <td>$563.30</td>\\\\n            <td>$140826.25</td>\\\\n            <td>$110826.25</td>\\\\n        </tr>\\\\n    \\\\n            </table>\\\\n            \\\\n        <h3>Best Performing Stock: AMZN</h3>\\\\n        <p>\\\\n            Quantity: 1800<br>\\\\n            Purchase Price: $50.00<br>\\\\n            Latest Price: $152.79<br>\\\\n            Profit/Loss: $185022.00\\\\n        </p>\\\\n            \\\\n        <h3>Worst Performing Stock: TSLA</h3>\\\\n        <p>\\\\n            Quantity: 500<br>\\\\n            Purchase Price: $500.00<br>\\\\n            Latest Price: $219.39<br>\\\\n            Profit/Loss: -$140302.80\\\\n        </p>\\\\n    </body>\\\\n</html>\\\\n\"}', 'name': 'send_email'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_BnTq6jtVnVs5Gs16mKpAfukv', 'function': {'arguments': '{\"to\":\"alemor@microsoft.com\",\"content\":\"<html><head><style> table { width: 100%; border-collapse: collapse; }th, td { text-align: left; padding: 8px; }tr:nth-child(even) { background-color: #f2f2f2; }</style></head><body><h1 style=\\\\\"text-align: center;\\\\\">Portfolio Report as of 2024-01-16 20:37:38</h1><h2>Portfolio Details:</h2><table border=\\\\\"1\\\\\"><tr><th>Ticker</th><th>QTY</th><th>Latest_Price</th><th>Current_Value</th><th>Performance</th></tr><tr><td>AAPL</td><td>10</td><td>183.22</td><td>1832.2</td><td>-667.8</td></tr><tr><td>MSFT</td><td>200</td><td>389.48</td><td>77896.0</td><td>57896.0</td></tr><tr><td>GOOGL</td><td>1200</td><td>142.01</td><td>170412.0</td><td>80412.0</td></tr><tr><td>AMZN</td><td>1800</td><td>152.9</td><td>275220.0</td><td>185220.0</td></tr><tr><td>TSLA</td><td>500</td><td>219.45</td><td>109725.0</td><td>-140275.0</td></tr><tr><td>NFLX</td><td>300</td><td>480.0</td><td>144000.0</td><td>120000.0</td></tr><tr><td>NVDA</td><td>250</td><td>561.08</td><td>140270.0</td><td>110270.0</td></tr></table><h2>Best Performing Stock:</h2><table border=\\\\\"1\\\\\"><tr><th>Ticker</th><th>QTY</th><th>Latest_Price</th><th>Current_Value</th><th>Performance</th></tr><tr><td>AMZN</td><td>1800</td><td>152.9</td><td>275220.0</td><td>185220.0</td></tr></table><h2>Worst Performing Stock:</h2><table border=\\\\\"1\\\\\"><tr><th>Ticker</th><th>QTY</th><th>Latest_Price</th><th>Current_Value</th><th>Performance</th></tr><tr><td>TSLA</td><td>500</td><td>219.45</td><td>109725.0</td><td>-140275.0</td></tr></table></body></html>\"}', 'name': 'send_email'}, 'type': 'function'}]}\n",
       "Sending email...\n",
       "Email sent to: alemor@microsoft.com\n",
       "Submitting outputs back to the Assistant...\n",
-      "Waiting for the Assistant to process...\n",
-      "Assistant: The HTML formatted report with the details for each stock based on the latest stock prices, and the best and worst performing stocks in your portfolio, has been sent to alemor@microsoft.com.\n",
-      "User: Based on the provided portfolio, please email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\n",
-      "ThreadDeleted(id='thread_atx1U1aFxDTZdZ5cdNk0ru7Q', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_kyfLQ7ioPqs0faC1YvFYPPaN', deleted=True, object='assistant.deleted')\n",
-      "FileDeleted(id='assistant-LRmMdeziJqDgQe35HctdaedD', deleted=True, object='file')\n"
+      "Generated message: The HTML formatted report has been successfully emailed to alemor@microsoft.com. If there's anything more I can assist you with, please let me know!\n",
+      "To Alex: The HTML formatted report has been successfully emailed to alemor@microsoft.com. If there's anything more I can assist you with, please let me know!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"The HTML formatted report has been successfully emailed to alemor@microsoft.com. If there's anything more I can assist you with, please let me know!\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "helper.generate_response(client,stock_assistant,\"Based on the provided portfolio, please email me an HTML formatted report to alemor@microsoft.com with the details for each stock based on the latest stock prices, and list the best and worst performing stocks in my portfolio.\", \"123\", \"Alex\", function_calling_delegate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting:  1  assistants.\n",
+      "AssistantDeleted(id='asst_9XFFufWoLki4SooA1OLVU9GD', deleted=True, object='assistant.deleted')\n",
+      "Deleting:  1  threads.\n",
+      "ThreadDeleted(id='thread_TypTapr7ZuM5RzRrsnmvPhD2', deleted=True, object='thread.deleted')\n",
+      "Deleting:  1  files.\n",
+      "FileDeleted(id='assistant-PG6QBBpXAVnE2wTsaiycOnvd', deleted=True, object='file')\n"
      ]
     }
    ],
    "source": [
-    "while True:\n",
-    "    # Wait for 1 seconds\n",
-    "    time.sleep(5)\n",
-    "\n",
-    "    # Retrieve the run status\n",
-    "    run_status = client.beta.threads.runs.retrieve(\n",
-    "        thread_id=thread.id,\n",
-    "        run_id=run.id\n",
-    "    )\n",
-    "    #print(run_status.model_dump_json(indent=4))\n",
-    "\n",
-    "    # If run is completed, get messages\n",
-    "    if run_status.status == 'completed':\n",
-    "        messages = client.beta.threads.messages.list(\n",
-    "            thread_id=thread.id\n",
-    "        )\n",
-    "\n",
-    "        # Loop through messages and print content based on role\n",
-    "        for msg in messages.data:\n",
-    "            role = msg.role\n",
-    "            content = msg.content[0].text.value\n",
-    "            print(f\"{role.capitalize()}: {content}\")\n",
-    "\n",
-    "        ## Cleanup\n",
-    "        print(client.beta.threads.delete(thread.id))\n",
-    "        print(client.beta.assistants.delete(stock_assistant.id))\n",
-    "        print(client.files.delete(csv_file.id))\n",
-    "\n",
-    "        break\n",
-    "    elif run_status.status == 'requires_action':\n",
-    "        print(\"Function Calling\")\n",
-    "        required_actions = run_status.required_action.submit_tool_outputs.model_dump()\n",
-    "        print(required_actions)\n",
-    "        tool_outputs = []\n",
-    "        import json\n",
-    "        for action in required_actions[\"tool_calls\"]:\n",
-    "            func_name = action['function']['name']\n",
-    "            arguments = json.loads(action['function']['arguments'])\n",
-    "            \n",
-    "            if func_name == \"get_stock_price\":\n",
-    "                output = get_stock_price(symbol=arguments['symbol'])\n",
-    "                tool_outputs.append({\n",
-    "                    \"tool_call_id\": action['id'],\n",
-    "                    \"output\": output\n",
-    "                })\n",
-    "            elif func_name == \"send_email\":\n",
-    "                print(\"Sending email...\")\n",
-    "                email_to = arguments['to']\n",
-    "                email_content = arguments['content']\n",
-    "                helper.send_email({'to': email_to,'content':email_content})\n",
-    "                \n",
-    "                tool_outputs.append({\n",
-    "                    \"tool_call_id\": action['id'],\n",
-    "                    \"output\": \"Email sent\"\n",
-    "                })\n",
-    "            else:\n",
-    "                raise ValueError(f\"Unknown function: {func_name}\")\n",
-    "            \n",
-    "        print(\"Submitting outputs back to the Assistant...\")\n",
-    "        client.beta.threads.runs.submit_tool_outputs(\n",
-    "            thread_id=thread.id,\n",
-    "            run_id=run.id,\n",
-    "            tool_outputs=tool_outputs\n",
-    "        )\n",
-    "    else:\n",
-    "        print(\"Waiting for the Assistant to process...\")\n",
-    "        time.sleep(5)"
+    "helper.cleanup(client)"
    ]
   }
  ],
