--- a/notebooks/assistant-03-function.ipynb
+++ b/notebooks/assistant-03-function.ipynb
@@ -221,21 +221,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Framework counts Assistants: 1, Threads: 1, Files: 0\n"
-     ]
-    }
-   ],
    "source": [
-    "assistants, threads, files = helper.get_counts()\n",
-    "print(f\"Framework counts Assistants: {assistants}, Threads: {threads}, Files: {files}\")"
+    "### Delete all demo objects"
    ]
   },
   {
