--- a/notebooks/assistant-06-code_function_la_email.ipynb
+++ b/notebooks/assistant-06-code_function_la_email.ipynb
@@ -265,6 +265,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Delete all demo objects"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
