Initial travel bot

--- a/notebooks/assistant-10-retrieval_HR_assistant.ipynb
+++ b/notebooks/assistant-10-retrieval_HR_assistant.ipynb
@@ -53,9 +53,9 @@
    ],
    "source": [
     "## Files\n",
-    "file_benefits = helper.upload_file(client,\"../data/contoso-benefits.txt\")\n",
-    "file_401k = helper.upload_file(client,\"../data/contoso-401k.txt\")\n",
-    "file_leave = helper.upload_file(client,\"../data/contoso-medical_leave.txt\")"
+    "file_benefits = helper.upload_file(client,\"../data/HR/contoso-benefits.txt\")\n",
+    "file_401k = helper.upload_file(client,\"../data/HR/contoso-401k.txt\")\n",
+    "file_leave = helper.upload_file(client,\"../data/HR/contoso-medical_leave.txt\")"
    ]
   },
   {
