Updated the path

--- a/notebooks/assistant-06-code_function_la_email.ipynb
+++ b/notebooks/assistant-06-code_function_la_email.ipynb
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "csv_file = helper.upload_file(client,\"../data/fta-portfolio.csv\")"
+    "csv_file = helper.upload_file(client,\"../data/finance/fta-portfolio.csv\")"
    ]
   },
   {
