--- a/notebooks/assistant-11-Travelbot.ipynb
+++ b/notebooks/assistant-11-Travelbot.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define the HR Assistant"
+    "### Define the Assistant"
    ]
   },
   {
